--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
-    "@ngrx/effects": "^15.3.0",
-    "@ngrx/entity": "^15.3.0",
-    "@ngrx/router-store": "^15.3.0",
-    "@ngrx/store": "^15.2.0",
+    "@ngrx/effects": "^15.4.0",
+    "@ngrx/store": "^15.4.0",
+    "@ngrx/store-devtools": "^15.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
